[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/ScaryPlant/BossPlant_Level2.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ScaryPlant/ScaryPlant.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 421.446

[sub_resource type="CircleShape2D" id=2]
radius = 27.4357

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.750831, 1 )
colors = PoolColorArray( 0.407227, 0.133689, 0.237868, 1, 0.649414, 0.173909, 0.237637, 1, 1, 0.509786, 0.509786, 0 )

[node name="ScaryPlant" type="KinematicBody2D"]
script = ExtResource( 2 )
health = 50
damage = 10
attack_speed = 3.0
move_speed = 0.0

[node name="Icon" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
offset = Vector2( 0, 30 )
region_enabled = true
region_rect = Rect2( 0, 0, 128, 90 )

[node name="leftwing" type="Node2D" parent="Icon"]

[node name="Position2D" type="Position2D" parent="Icon/leftwing"]
position = Vector2( -61.7354, 33.4494 )

[node name="Position2D2" type="Position2D" parent="Icon/leftwing"]
position = Vector2( -54.1027, 30.7555 )

[node name="Position2D3" type="Position2D" parent="Icon/leftwing"]
position = Vector2( -46.4699, 29.184 )

[node name="Position2D4" type="Position2D" parent="Icon/leftwing"]
position = Vector2( -38.8372, 29.8575 )

[node name="Position2D5" type="Position2D" parent="Icon/leftwing"]
position = Vector2( -31.4289, 29.4085 )

[node name="Position2D6" type="Position2D" parent="Icon/leftwing"]
position = Vector2( -6.51027, 31.2044 )

[node name="rightwing" type="Node2D" parent="Icon"]
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Position2D" type="Position2D" parent="Icon/rightwing"]
position = Vector2( -61.7354, 33.4494 )

[node name="Position2D2" type="Position2D" parent="Icon/rightwing"]
position = Vector2( -54.1027, 30.7555 )

[node name="Position2D3" type="Position2D" parent="Icon/rightwing"]
position = Vector2( -46.4699, 29.184 )

[node name="Position2D4" type="Position2D" parent="Icon/rightwing"]
position = Vector2( -38.8372, 29.8575 )

[node name="Position2D5" type="Position2D" parent="Icon/rightwing"]
position = Vector2( -31.4289, 29.4085 )

[node name="Position2D6" type="Position2D" parent="Icon/rightwing"]
position = Vector2( -6.51027, 31.2044 )

[node name="PlayerDetectionRadius" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionRadius"]
shape = SubResource( 1 )

[node name="Collider_main" type="CollisionShape2D" parent="."]
position = Vector2( -0.199997, 33.6 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpineWaveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40.6, 14.8 )
rotation = -1.19031
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -43, 15 )
rotation = 1.22173
shape = SubResource( 3 )

[node name="ShootParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0.600006, 13.4 )
emitting = false
amount = 30
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, 100 )
spread = 10.0
gravity = Vector2( 0, -30 )
initial_velocity = 100.0
initial_velocity_random = 0.51
angle = 673.7
angle_random = 1.0
scale_amount = 5.0
scale_amount_random = 1.0
color_ramp = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetectionRadius" to="." method="_on_PlayerDetectionRadius_body_entered"]
[connection signal="body_exited" from="PlayerDetectionRadius" to="." method="_on_PlayerDetectionRadius_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpineWaveTimer" to="." method="_on_SpineWaveTimer_timeout"]
